
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ real ;
typedef scalar_t__ doublereal ;



doublereal slamc3_(real *a, real *b)
{

    real ret_val;
    ret_val = *a + *b;

    return ret_val;



}
